@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

left to right direction

class Editor {
    name
    password
}

class Map {
    size
    name
    scale
}

class Industry {
}

class IndustryType{
    importation
    exportation
}

class Position{
    xCoordinate
    yCoordinate
}

class ResourceType{
    value
}

Editor "1" -- "*" Map: creates >
Editor "1" -- "*" Industry: places >
Map "1" -- "*" Industry: contains >
Industry "*" -- "1" Position: has >
Industry "1" -- "1" IndustryType: has >
IndustryType "1" -- "2" ResourceType : has >

@enduml
